Thu Feb 17 21:17:57 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/testdata/DcpsLib/DcpsLibTest.opendds:
        * tools/modeling/testdata/DcpsLib/DcpsLibTest_screenshot_2.png:

	  Fixed "Entityactory" typo.

Thu Feb 17 21:12:26 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.help/html/modeling/images/main_diagram_lib_shortcut.png:
        * tools/modeling/plugins/org.opendds.modeling.help/html/modeling/tasks/workingwithopenddsmodels.html:

          Added discussion on how to link to other model libraries on the main diagram.

Thu Feb 17 20:30:41 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * java/tests/messenger/publisher/TestPublisher.java:

          Need a finite timeout for wait_for_acks for use with non-TCP.

Thu Feb 17 17:46:28 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/testdata/DcpsLib/DcpsLibTest.opendds_diagram:
        * tools/modeling/testdata/DcpsLib/DcpsLibTest_screenshot_2.png:

          Update diagram to account for visual ID changes caused by using
          topcis:Topic in mapping for node Topic.

Thu Feb 17 17:08:36 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/plugin.xml:
        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/src/org/opendds/modeling/model/opendds/diagram/dcpslib/edit/parts/TopicQoSPoliciesCustomEditPart.java:
        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/src/org/opendds/modeling/model/opendds/diagram/dcpslib/edit/parts/TopicQoSPoliciesSharedEditPart.java:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.gmfmap:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.trace:

          Fix icon for Topic in palette by having Topic top-level node mapping use topics:Topic instead